# biokgsuite_dashboard

./: .gitignore  BioKGSuite_Report.docx  BioKGSuite_Report.tex  BioKGSuite_Taxonomy.html  CITATION.cff  LICENSE  README.md  biokgsuite_update.pptx  build_report.js  config.yaml  environment.yml  pyproject.toml  run_emb_model.py
data/: kg_slot_maps.yaml
docs/: gemma_name_resolution_followup.md  gemma_slide_outline.md  kg_block_design.md  llm_prompting_analysis_outline.md  llm_prompting_strategies.md  resampling_methodology.md
eval_notebooks/: 00_benchmark_summary.ipynb  01_coverage.ipynb  02_annotation_accuracy.ipynb  03_trustworthiness.ipynb  04_topology.ipynb  05_stability.ipynb  06_task_performance.ipynb  07_generalization.ipynb  08_embedding_validation.ipynb  09_llm_integration.ipynb  verify_fix.ipynb
results/: README.md  benchmark_summary.csv  embedding_comparison.csv  relation_conflicts.csv
scripts/: _inject_gemma_into_nb08.py  _inject_resampling_into_nb08.py  _inject_strategies_into_nb09.py  build_drugbank_xref.py  ddi_gap_audit.py  download_mondo_sssom.sh  gen_matrix_subgraph.py  matrix_predicate_sweep.py  pilot_kg_block.py  pilot_packaging.py  pilot_ranking.py  run_emb_model.py  run_gemma_benchmark.sh  run_gemma_matrix.py  run_prompting_pilot.sh  run_resampled_nb08.sh  run_resampling.py
src/: coverage.py  embedding.py  evaluation.py  graph_utils.py  loading.py  metrics.py  negative_sampling.py  ontology.py  ontology_classifier.py  path_analysis.py  plotting.py  prompting_strategies.py  regulatory_approvals.py  relations.py  schemas.py  scoring.py  (+2 more)
(+38 files in other folders)
