[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "biokgsuite"
version = "1.0.0"
description = "A systematic evaluation framework for biomedical knowledge graphs"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
